# fitpulse

./: .dclintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  Taskfile.yml  formatter-github.js  go.work  go.work.sum  pyrightconfig.json
.devcontainer/: devcontainer.json
.github/workflows/: build-dist.yml  ci.yml  compose-lint.yml  docs.yml  swagger-ui.yml
docs/: DeveloperGuide.md
docs/ADR/: ADR-101-frontend-framework-selection-react.md  ADR-102-backend-language-stack-go-and-python.md  ADR-103-relational-database-selection-postgresql.md  ADR-104-graph-database-selection-dgraph.md  ADR-105-event-backbone-selection-kafka.md  ADR-106-development-workflow-orchestration-three-musketeers-make-docker-compose.md  README.md
docs/API/: activity-service.yaml  identity-service.yaml  index.html  swagger-config.json
docs/Design/: HLD.md  LLD.md  LLD.md.bak
docs/PRD/: PRD_MultiLanguage_Microservices_Exercise.md
frontend/web/: .eslintrc.cjs  index.html  (+9 more)
libs/python/: __init__.py  pyproject.toml
libs/python/schemas/: __init__.py  account.py  activity.py  exercise.py
services/identity-service/: Dockerfile  pyproject.toml
services/identity-service/app/: config.py  main.py  repository.py
services/identity-service/app/api/: routes.py
services/identity-service/app/domain/: account.py  contracts.py  service.py
services/identity-service/app/security/: rate_limiter.py  redis_rate_limiter.py  tokens.py
services/identity-service/docs/: conf.py  index.rst  overview.rst  reference.rst
services/identity-service/tests/: test_api.py  test_rate_limiter.py
(+121 files in other folders)
