[project]
name = "platform-shared-schemas"
version = "0.1.0"
description = "Shared Pydantic schemas for cross-service contracts"
authors = ["Platform Team <dev@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8"
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"
